[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tuithello"
version = "0.0.0"
authors = [
    {name = "Thomas Svensson", email = "thomas@tsvenson.com"},
]
description = "An Othello game running in the console."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["game", "othello", "console"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual",
]

[project.scripts]
tuithello = "tuithello.main:app"